--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,8 +1,4 @@
 {
-  "accentColor": "#d69429",
-  "cssTheme": "Blue Topaz",
-  "textFontFamily": "Source Code Pro",
-  "interfaceFontFamily": "MiClock",
-  "monospaceFontFamily": "Helvetica",
-  "baseFontSize": 16
+  "accentColor": "",
+  "cssTheme": "Blue Topaz"
 }
